<resources>
    <string name="app_facebook_id">252705004896763</string>
    <string name="common_app_name">andG</string>
    <string name="common_loading">Loading...</string>
    <string name="common_logging_in">Logging in...</string>
    <string name="common_settings">Settings</string>
    <string name="common_save">Save</string>
    <string name="common_cancel">Cancel</string>
    <string name="common_yes">Yes</string>
    <string name="common_no">No</string>
    <string name="common_continue">Continue</string>
    <string name="common_name">Name</string>
    <string name="common_enter_name">&lt;Enter name&gt;</string>
    <string name="common_birthday">Birthday</string>
    <string name="common_required">&lt;Required&gt;</string>
    <string name="common_gender">I\'m a</string>
    <string name="common_interested_in">Interested in</string>
    <string name="common_location">Location</string>
    <string name="common_woman">凹</string>
    <string name="common_man">凸</string>
    <string name="common_men">凸</string>
    <string name="common_women">凹</string>
    <string name="common_men_and_women">凸 and 凹</string>
    <string name="common_ok">OK</string>
    <string name="common_email">Email</string>
    <string name="common_enter_email">&lt;Enter email&gt;</string>
    <string name="common_password">Password</string>
    <string name="common_enter_password">&lt;Enter password&gt;</string>
    <string name="common_done">Done</string>
    <string name="common_friends">Friends</string>
    <string name="common_friend">Friend</string>
    <string name="common_backstage">Backstage Picture</string>
    <string name="common_backstage_edit">Edit Your Backstage</string>
    <string name="common_backstages">Backstage Pictures</string>
    <string name="common_status_online">online</string>
    <string name="common_status_offline">offline</string>
    <string name="common_require">Required</string>
    <string name="add_friends_title">Add Friends</string>
    <string name="common_error">Error</string>
    <string name="common_here">Here</string>
    <string name="common_close">Close</string>
    <string name="common_no_more_items_to_show">No more items to show.</string>
    <string name="common_not_enough_points_title">Not Enough Points</string>
    <string name="common_unlock_duration">Unlock for %1$s hours.</string>
    <string name="common_unlock_for_targets">And so did %1$s other!</string>
    <string name="common_unlock_suggest">Curious to find out who they are?</string>
    <string name="common_mile_abbreviation">mi</string>
    <string name="common_kilometer_abbreviation">km</string>
    <string name="common_year_unit">y</string>
    <string name="common_month_unit">mo</string>
    <string name="common_week_unit">w</string>
    <string name="common_day_unit">d</string>
    <string name="common_hour_unit">h</string>
    <string name="common_minute_unit">m</string>
    <string name="common_second_unit">s</string>
    <string name="common_now">now</string>
    <string name="signup_sign_up">Sign Up</string>
    <string name="signup_log_in">Log In</string>
    <string name="add_friend">Add Friend</string>
    <string name="add_friends">Add Friends</string>
    <string name="add_friends_button">+ Add Friends</string>
    <string name="add_friends_skip">Skip</string>
    <string name="add_1_friend">Add 1 Friend</string>
    <string name="add_n_friends">Add %1$d Friends</string>
    <string name="add_friends_deselect_all">Deselect All</string>
    <string name="add_friends_select_all">Select All</string>
    <string name="add_friends_sms_msg">Send %1$d invites via SMS and earn up to %2$d\nPoints if they join!</string>
    <string name="add_friends_sms_content">I sent you a message on andG\n%1$s</string>
    <string name="add_friends_email_subject">I sent you a message on andG.</string>
    <string name="add_friends_email_content">Hey! I\'m inviting you get andG, an amazing free IPhone and Android. Get it now from \n%1$s</string>
    <string name="add_friends_email_msg">Send %1$d invites via email and earn up to %2$d\nPoints if they join!</string>
    <string name="add_friends_invite_button_title">Invite</string>
    <string name="add_friends_pending_button_title">Pending</string>
    <string name="add_friends_chat_with_your_friends">Chat with your friends</string>
    <string name="add_friends_chat_with_your_friends_content1">Show andG your group of friends.</string>
    <string name="add_friends_chat_with_your_friends_content2">Earn %1$s points for each new friend!</string>
    <string name="login">Login</string>
    <string name="login_forgot">Forgot?</string>
    <string name="login_login_button">Login</string>
    <string name="login_failed_dialog_title">Login Failed!</string>
    <string name="login_forgot_verify_dialog_title">Verify code</string>
    <string name="login_forgot_send_verify_code_to_email">Send a verification code to email</string>
    <string name="login_forgot_change_password">Change password</string>
    <string name="account_locked_user">Account has been locked. Please contact administrator.</string>
    <string name="menu_profile_points">Points</string>
    <string name="tap_to_set_your_profile_picture">Tap to set your profile picture</string>
    <string name="setup_profile">Setup Profile</string>
    <string name="name_is_empty">Name is empty</string>
    <string name="birthday_value_is_invalid">Birthday value is invalid</string>
    <string name="require_age_is_higher_than_18">Require age is higher than 18</string>
    <string name="email_is_empty">Email is empty.</string>
    <string name="email_invalid_format">Email invalid format.</string>
    <string name="creating_account_please_wait">Creating account, please wait...</string>
    <string name="complete_registration">Complete Registration</string>
    <string name="password_length_must_than">Password must be between %1$s and %2$s characters!</string>
    <string name="email_length_must_than">Email content must be less than %1$s characters!</string>
    <string name="waiting">Waiting...</string>
    <string name="meet_people">Search Friends</string>
    <string name="buzz">Check the timeline</string>
    <string name="buzz_edit_text_hint">What are you up to?</string>
    <string name="look_at_me">Auction</string>
    <string name="shake_to_chat">Shake to Chat</string>
    <string name="my_profile">Profile</string>
    <string name="connections">My Friends</string>
    <string name="my_chats">Chats</string>
    <string name="notifications">Notifications</string>
    <string name="points">Points</string>
    <string name="points_sliding">Points</string>
    <string name="social_network">MISC</string>
    <string name="share_my_buzz">Recent Report</string>
    <string name="set_up_your_profile">Set up profile</string>
    <string name="alert">Alert</string>
    <string name="pull_to_refresh_pull_label">Pull to refresh...</string>
    <string name="pull_to_refresh_release_label">Release to refresh...</string>
    <string name="pull_to_refresh_refreshing_label">Loading...</string>
    <string name="pull_to_load_more_pull_label">Pull to load more...</string>
    <string name="pull_to_load_more_release_label">Release to load more...</string>
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
    <string name="title_textview_my_profile_edit">Edit Info</string>
    <string name="title_textview_my_profile_share_pic">Share Picure</string>
    <string name="title_textview_my_profile_share_status">Recent Report</string>
    <string name="title_textview_my_profile_give_gift">Give Gift</string>
    <string name="title_textview_user_profile_wink">Wink</string>
    <string name="title_textview_user_profile_chat">Chat</string>
    <string name="title_textview_user_profile_add_favorites">Add To Favorites</string>
    <string name="title_textview_user_profile_remove_favorites">Remove From Favorites</string>
    <string name="title_textview_user_profile_more">More</string>
    <string name="search">Search</string>
    <string name="who_checked_you_out">Who Checked You Out?</string>
    <string name="wink_bomb">Wink Bomb</string>
    <string name="list_view">List View</string>
    <string name="grid_view">Grid View</string>
    <string name="profile_title_the_basic">The Basics</string>
    <string name="profile_the_basics_view_full_profile">View Full Profile</string>
    <string name="profile_title_lastest_buzz">Lastest Buzz</string>
    <string name="profile_title_lastest_gifts">Lastest Gifts</string>
    <string name="profile_title_gender">Gender</string>
    <string name="profile_title_the_age">Age</string>
    <string name="profile_title_the_location">Location (Auto)</string>
    <string name="profile_title_the_interested_in">Interested In</string>
    <string name="profile_title_the_looking_for">Looking For</string>
    <string name="profile_title_the_about_me">About Me</string>
    <string name="profile_title_extended_info">Extended Info</string>
    <string name="profile_title_relationship_status">Relationship status</string>
    <string name="profile_title_body_type">Body Type</string>
    <string name="profile_title_height">Height</string>
    <string name="profile_title_ethnicity">Ethnicity</string>
    <string name="profile_title_interests">Interests</string>
    <string name="profile_title_ask_me">Ask me</string>
    <string name="dialog_profile_more_block_user">Block User</string>
    <string name="dialog_profile_more_unblock_user">Unblock User</string>
    <string name="dialog_profile_more_manage_online_alert">Manage Online Alert</string>
    <string name="dialog_profile_more_report_user">Report User</string>
    <string name="dialog_profile_more_remove_friend">Remove Friend</string>
    <string name="dialog_profile_more_remove_friend_content">Are you sure?</string>
    <string name="profile_add_to_favorites_title">@string/title_textview_user_profile_add_favorites</string>
    <string name="profile_add_to_favorites_message">You added %1$s to your Favorites. Do you give %2$s a gift?</string>
    <string name="profile_remove_from_favorites_title">@string/title_textview_user_profile_remove_favorites</string>
    <string name="profile_remove_from_favorites_message">You removed %1$s from Your Favorites.</string>
    <string name="profile_user_friends_title">%1$s\'s Friends</string>
    <string name="profile_user_friends_no_item">%1$s has not any friends.</string>
    <string name="profile_winked">Winked</string>
    <string name="profile_dialog_msg_wink">You winked at %1$s.</string>
    <string name="profile_the_basics_view_full_gift">View All Gift</string>
    <string name="edit_my_profile_title">Edit Profile</string>
    <string name="edit_my_profile_title_nav_left">@string/common_cancel</string>
    <string name="edit_my_profile_title_nav_right">@string/common_save</string>
    <string name="edit_my_profile_dialog_height_title">Choose yours height</string>
    <string name="settings">Settings</string>
    <string name="settings_logout">Logout</string>
    <string name="settings_logout_dialog_title">Are you sure?</string>
    <string name="settings_logout_dialog_content">Are you sure want to logout?</string>
    <string name="settings_chat_and_notifications">Chat and Notification Settings:</string>
    <string name="settings_chat_and_notifications_sound_on">Sound On</string>
    <string name="settings_chat_and_notifications_vibration_on">Vibration On</string>
    <string name="settings_chat_and_notifications_notifications">Notifications</string>
    <string name="settings_chat_and_notifications_notifications_email">Email notifications</string>
</resources>